# gravitron

./: .gitignore  HARDWARE_REFERENCE.md  Makefile  README.md  authorization.py  flake.nix  test.py  test_debug.py
arduino-firmware/: .gitignore  smartcar_firmware.ino
arduino-firmware/smartcar_firmware/: smartcar_firmware.ino
esp32-firmware/: .gitignore  CMakeLists.txt  README.md  controller.html  partitions.csv  sdkconfig.defaults
esp32-firmware/main/: CMakeLists.txt  camera.c  camera.h  http_server.c  http_server.h  index.html  main.c  uart_bridge.c  uart_bridge.h  websocket.c  websocket.h
esp32-firmware/receiver/: receiver.ino
esp32-firmware/receiver_test/: receiver_test.ino
esp32-firmware/transmitter/: transmitter.ino
server/: .env.example  package-lock.json  package.json  server.js
server/public/: controller.html  operator.html  phone.html  unauthorized.html
